src/objects/IncomingEmail__c.object
<CustomObject>
    <description>This object is a dump for all emails hitting the email address declared in email services..</description>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IncomingEmail</label>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>IncomingEmail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IncomingEmails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>